# SmartHomeDesktop

./: Cargo.toml  README.md
smart_home_client/src/: tcp_client.rs  udp_client.rs
src/: main.rs
src/ui/: mod.rs
