[package]
name = "smart_home_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_web = "0.4"
iced = { version = "0.10.0", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
smart_home_client = { path = "smart_home_client" }
wasm-bindgen = "0.2.69"
